Chapter 8 no headers or comments

--- a/firstproject/bin/.gitignore
+++ b/firstproject/bin/.gitignore
@@ -1,1 +1,9 @@
+/First$1.class
+/First$2.class
+/First$3.class
+/First$4.class
+/First.class
+/Untitled-1-Recovered.jpg
 /cpt10/
+/crt.docx
+/firstproject/
